updated all Google CoLab links

--- a/010_Fundamentals/PhishingModel.ipynb
+++ b/010_Fundamentals/PhishingModel.ipynb
@@ -5,7 +5,7 @@
    "id": "bb48cc8c-51e2-44ff-82dd-6036b819f637",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/IntroAILabs/blob/main/notebooks/PhishingModel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/010_Fundamentals/PhishingModel.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
