--- a/020_SupervisedLearning/Linear_Regression.ipynb
+++ b/020_SupervisedLearning/Linear_Regression.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "146278fd-b8b9-4e5a-942d-dffa4e4f81ff",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/020_SupervisedLearning/Linear_Regression.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f594a5f1-da3c-4acc-88da-81e55131f1ee",
    "metadata": {},
    "source": [
