--- a/020_SupervisedLearning/Supervised_Learning.ipynb
+++ b/020_SupervisedLearning/Supervised_Learning.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f49f76e7-ecd9-4ba8-84aa-8b13e64ab2f5",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/020_SupervisedLearning/Supervised_Learning.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54d44257-d1b4-43ef-9734-853912be0749",
    "metadata": {},
    "source": [
