--- a/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
@@ -5,7 +5,7 @@
    "id": "8f9c9c0a-2494-46ae-b605-8a7cd73916ce",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/ModuleXX_bhisblogs-alpaca.ipynb\" target=\"new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
