--- a/022_LargeLanguageModels/inference_bhisblogs.ipynb
+++ b/022_LargeLanguageModels/inference_bhisblogs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5b536dbe-d217-4ded-96bb-55a0006f0351",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/022_LargeLanguageModels/inference_bhisblogs.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "82947277-df1f-4f70-b02b-b4ec5cb1b5df",
