--- a/022_LargeLanguageModels/inference_bhisblogs_alpaca.ipynb
+++ b/022_LargeLanguageModels/inference_bhisblogs_alpaca.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dcd13af8-5118-42e2-b501-6f0da6a953ad",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/022_LargeLanguageModels/inference_bhisblogs_alpaca.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82947277-df1f-4f70-b02b-b4ec5cb1b5df",
