--- a/010_Fundamentals/PandasExample.ipynb
+++ b/010_Fundamentals/PandasExample.ipynb
@@ -5,7 +5,7 @@
    "id": "8f523d37-c9ce-46ff-998d-00ac2b893f62",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/IntroAILabs/blob/main/notebooks/PandasExample.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/010_Fundamentals/PandasExample.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
