--- a/021_NeuralNetworks/Neural_Networks.ipynb
+++ b/021_NeuralNetworks/Neural_Networks.ipynb
@@ -5,7 +5,7 @@
    "id": "9b028a26-f0e1-4c50-bad5-0544adf04233",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/notebooks/ModuleXX_Neural_Networks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/021_NeuralNetworks/Neural_Networks.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
