renamed models and datasets for consistency

--- a/022_LargeLanguageModels/SFT_alpaca.ipynb
+++ b/022_LargeLanguageModels/SFT_alpaca.ipynb
@@ -192,7 +192,7 @@
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.02,\n",
+    "        weight_decay = 0.01,\n",
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
@@ -245,8 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('alpaca-llama3')\n",
-    "tokenizer.push_to_hub('alpaca-llama3')"
+    "model.push_to_hub('l3-alpaca')\n",
+    "tokenizer.push_to_hub('l3-alpaca')"
    ]
   },
   {
@@ -271,14 +271,6 @@
     "text_streamer = TextStreamer(tokenizer)\n",
     "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93d044d3-4018-42bb-973a-01efd1adfd45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
