--- a/022_LargeLanguageModels/SFT_bhisblogs.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs.ipynb
@@ -198,7 +198,7 @@
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.02,\n",
+    "        weight_decay = 0.01,\n",
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
@@ -251,8 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('bhisblogs-llama3')\n",
-    "tokenizer.push_to_hub('bhisblogs-llama3')"
+    "model.push_to_hub('l3-bhisblogs')\n",
+    "tokenizer.push_to_hub('l3-bhisblogs')"
    ]
   },
   {
