--- a/022_LargeLanguageModels/SFT_bhisblogs_improved.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_improved.ipynb
@@ -5,7 +5,7 @@
    "id": "8f9c9c0a-2494-46ae-b605-8a7cd73916ce",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/022_LargeLanguageModels/SFT_bhisblogs_improved.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = \"joffthyer/alpaca-llama3\",\n",
+    "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7191a826-82c9-4f95-bceb-b295dadf3470",
+   "id": "6721ed23-3cc0-4264-a2df-ed7c3777a96e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "083ed717-2d0f-4d1f-8f20-2edc886e07e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PEFT MODEL\n",
+    "model = unsloth.FastLanguageModel.get_peft_model(\n",
+    "    model,\n",
+    "    r = 16, # Suggested choice of 8, 16, 32, 64, or 128\n",
+    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
+    "    lora_alpha = 16,\n",
+    "    lora_dropout = 0, # 0 is optimized\n",
+    "    bias = \"none\",    # \"none\" is optimized\n",
+    "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+    "    random_state = 3407,\n",
+    "    use_rslora = False,  # We support rank stabilized LoRA\n",
+    "    loftq_config = None, # And LoftQ\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "458bb89c-553e-4b2d-acfc-909bcae5167e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +123,6 @@
     "{}\n",
     "\n",
     "### Input:\n",
-    "{}\n",
     "\n",
     "### Response:\n",
     "{}\"\"\"\n",
@@ -109,11 +130,10 @@
     "def format_prompts(p):\n",
     "    # these are provided as lists\n",
     "    instructions = p[\"instruction\"]\n",
-    "    inputs       = p[\"input\"]\n",
     "    outputs      = p[\"output\"]\n",
     "    texts = []\n",
-    "    for ins, inp, outp in zip(instructions, inputs, outputs):\n",
-    "        text = prompt.format(ins, inp, outp) + tokenizer.eos_token\n",
+    "    for ins, outp in zip(instructions, outputs):\n",
+    "        text = prompt.format(ins, outp) + tokenizer.eos_token\n",
     "        texts.append(text)\n",
     "    return { \"text\" : texts }\n"
    ]
@@ -131,11 +151,9 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# get dataset\n",
-    "r = requests.get('https://raw.githubusercontent.com/RiverGumSecurity/Datasets/refs/heads/main/BHIS/bhis-blogs-cleaned.json')\n",
-    "data = json.loads(r.text)\n",
-    "ds = datasets.Dataset.from_list(data)\n",
-    "ds = ds.map(format_prompts, batched=True)"
+    "from datasets import load_dataset\n",
+    "ds = load_dataset(\"joffthyer/bhisblogs\", split = \"train\")\n",
+    "ds = ds.map(format_prompts, batched = True)"
    ]
   },
   {
@@ -168,7 +186,7 @@
     "        warmup_steps = 5,\n",
     "        # Set this for 1 full training run.\n",
     "        num_train_epochs = 1,\n",
-    "        #max_steps = 50,\n",
+    "        max_steps = 80,\n",
     "        learning_rate = 2e-4,\n",
     "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
@@ -176,9 +194,9 @@
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.05,\n",
+    "        weight_decay = 0.01,\n",
     "        lr_scheduler_type = \"linear\",\n",
-    "        seed = 42,\n",
+    "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
     "        report_to = \"none\", # Use this for WandB etc\n",
     "    ),\n",
@@ -229,27 +247,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('l3-bhisblogs-alpaca')\n",
-    "tokenizer.push_to_hub('l3-bhisblogs-alpaca')"
+    "model.push_to_hub('l3-bhisblogs-improved')\n",
+    "tokenizer.push_to_hub('l3-bhisblogs-improved')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "34e19786-e1e8-480f-9184-d9a4e3ccbdfd",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import TextStreamer\n",
     "\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''Describe or summarize a blog written by John Strand.''', \"\", \"\")\n",
+    "inputs = tokenizer([prompt.format('''Describe the best practices for password encryption, security and policy selection''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
     "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 1024)"
+    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 4096)"
    ]
   },
   {
