--- a/022_LargeLanguageModels/inference_bhisblogs.ipynb
+++ b/022_LargeLanguageModels/inference_bhisblogs.ipynb
@@ -65,7 +65,7 @@
     "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = \"joffthyer/bhisblogs-llama3\",\n",
+    "    model_name = \"joffthyer/l3-bhisblogs\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
