added private options to model push

--- a/022_LargeLanguageModels/SFT_bhisblogs.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs.ipynb
@@ -251,8 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('l3-bhisblogs')\n",
-    "tokenizer.push_to_hub('l3-bhisblogs')"
+    "model.push_to_hub('l3-bhisblogs', private=True)\n",
+    "tokenizer.push_to_hub('l3-bhisblogs', private=True)"
    ]
   },
   {
