--- a/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
@@ -229,8 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('l3-bhisblogs-alpaca')\n",
-    "tokenizer.push_to_hub('l3-bhisblogs-alpaca')"
+    "model.push_to_hub('l3-bhisblogs-alpaca', private=True)\n",
+    "tokenizer.push_to_hub('l3-bhisblogs-alpaca', private=True)"
    ]
   },
   {
