--- a/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
@@ -225,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.push_to_hub('l3-bhisblogs-infotech-improved')\n",
-    "tokenizer.push_to_hub('l3-bhisblogs-infotech-improved')"
+    "model.push_to_hub('l3-bhisblogs-infotech-improved', private=True)\n",
+    "tokenizer.push_to_hub('l3-bhisblogs-infotech-improved', private=True)"
    ]
   },
   {
